--- a/bower.json
+++ b/bower.json
@@ -1,16 +1,27 @@
 {
   "name": "angular-velocity",
-  "description": "A base template for a typical angularjs application",
+  "description": "Angular Velocity",
   "version": "0.0.1",
-  "homepage": "https://github.com/thisissoon/angularjs-template",
+  "homepage": "https://github.com/thisissoon/angular-velocity",
   "license": "MIT",
-  "private": true,
+  "main": "dist/angular-velocity.js",
+  "ignore": [
+    "app",
+    "tests",
+    ".bowerrc",
+    ".editorconfig",
+    ".gitignore",
+    ".jshintrc",
+    ".travis.yml",
+    "Gruntfile.js",
+    "package.json",
+    "scripts.json"
+  ],
+  "private": false,
   "dependencies": {
-    "angular": "~1.3.5",
-    "angular-route": "~1.3.5",
-    "bootstrap": "~3.3.1"
+    "angular": "^1.2.17"
   },
   "devDependencies": {
-    "angular-mocks": "~1.3.5"
+    "angular-mocks": "^1.2.17"
   }
 }
