--- a/bower.json
+++ b/bower.json
@@ -19,7 +19,8 @@
   ],
   "private": false,
   "dependencies": {
-    "angular": "^1.2.17"
+    "angular": "^1.2.17",
+    "angular-route": "^1.2.17"
   },
   "devDependencies": {
     "angular-mocks": "^1.2.17"
