--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "connect-livereload": "~0.5.0",
     "connect-modrewrite": "~0.7.9",
     "coveralls": "~2.11.2",
+    "grunt-bump": "~0.1.0",
     "grunt-contrib-clean": "~0.6.0",
     "grunt-contrib-concat": "~0.5.0",
     "grunt-contrib-connect": "~0.9.0",
